[package]
name = "ballast-tui"
description = "ballast"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ballast"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
